apidocs updated for register and password reset with emails
