# src/handlers/auth.handlers.js
@@ -4,42 +4,31 @@ import {
   createError,
 } from '../utils/errors.utils.js';
 import { createToken, hashPassword } from '../utils/auth.utils.js';
-import { dbQuery } from '../utils/dbQueries.utils.js';
+import { dbQuery, getIsUserRegistered } from '../utils/dbQueries.utils.js';
 import { sendEmail } from '../utils/email.utils.js';
+import { getOrigin } from '../utils/url.utils.js';
 
 export async function requestRegister(req, res, next) {
   const { name, email, password } = req.body;
-  const [{ exists: userAlreadyRegistered }] = await dbQuery(
-    `
-    SELECT EXISTS(
-      SELECT 1
-      FROM "user"
-      WHERE email = :email
-    )
-    `,
-    { email },
-  );
-  if (userAlreadyRegistered) {
-    return next(
-      createError(409, `User with email ${email} is already registered`),
-    );
-  }
+  const isUserRegistered = await getIsUserRegistered(email);
 
-  const domain = `${req.protocol}://${req.headers.host}`;
-  const token = createToken({ name, email, password, type: 'register' });
-  sendEmail(
-    email,
-    'Emote account registration confirmation',
-    `
+  if (!isUserRegistered) {
+    const origin = getOrigin(req);
+    const token = createToken({ name, email, password, type: 'register' });
+    sendEmail(
+      email,
+      'Emote account registration confirmation',
+      `
     Send POST request to given url with given header:
-    - ${domain}/auth/register
+    - ${origin}/auth/register
     - Authorization: Bearer ${token}
     
     This will be changed to link to a page that automatically calls the above request when frontend is implemented`,
-  );
+    );
+  }
 
   res.status(201).json({
-    message: `An email has been sent to ${email}. Please click the confirmation link to create your account.`,
+    message: `If you are not already registered, you will receive a confirmation email.`,
   });
 }
 
@@ -54,7 +43,9 @@ export async function register(req, res, next) {
       `,
       { name, email, password: await hashPassword(password) },
     );
-    res.status(201).json({ token: createToken({ id: user.id, type: 'user' }) });
+    res
+      .status(201)
+      .json({ userToken: createToken({ id: user.id, type: 'user' }) });
   } catch (err) {
     checkUniqueConstraintViolation(
       err,
@@ -86,41 +77,31 @@ export async function login(req, res, next) {
     return next(incorrectLoginError);
   }
 
-  res.json({ token: createToken({ id: user.id, type: 'user' }) });
+  res.json({ userToken: createToken({ id: user.id, type: 'user' }) });
 }
 
 export async function requestResetPassword(req, res, next) {
   const { email } = req.body;
-  const [{ exists: userAlreadyRegistered }] = await dbQuery(
-    `
-    SELECT EXISTS(
-      SELECT 1
-      FROM "user"
-      WHERE email = :email
-    )
-    `,
-    { email },
-  );
-  if (!userAlreadyRegistered) {
-    return next(createError(409, `User with email ${email} is not registered`));
-  }
+  const isUserRegistered = await getIsUserRegistered(email);
 
-  const domain = `${req.protocol}://${req.headers.host}`;
-  const token = createToken({ email, type: 'resetPassword' });
-  sendEmail(
-    email,
-    'Emote password reset',
-    `
+  if (isUserRegistered) {
+    const origin = getOrigin(req);
+    const token = createToken({ email, type: 'resetPassword' });
+    sendEmail(
+      email,
+      'Emote password reset',
+      `
     Send PATCH request to given url, with given body and header:
-    - ${domain}/auth/reset-password
+    - ${origin}/auth/reset-password
     - { password: <new-password> }
     - Authorization: Bearer ${token}
     
     This will be changed to link to a page that automatically calls the above request when frontend is implemented`,
-  );
+    );
+  }
 
   res.status(201).json({
-    message: `An email has been sent to ${email}. Please click the link to reset your password.`,
+    message: `If you're registered, you will receive a password reset link`,
   });
 }
 
@@ -137,5 +118,6 @@ export async function resetPassword(req, res, next) {
     `,
     { email, password: await hashPassword(password) },
   );
-  res.json({ token: createToken({ id: user.id, type: 'user' }) });
+
+  res.json({ userToken: createToken({ id: user.id, type: 'user' }) });
 }
